--- a/src/main/resources/inspectionDesctiptions/JakartaDoctorImport.html
+++ b/src/main/resources/inspectionDesctiptions/JakartaDoctorImport.html
@@ -1,16 +1,21 @@
 <html>
 <body>
-Detecta imports <code>javax.*</code> elegíveis para migração para <code>jakarta.*</code> (Jakarta EE 9+).
+Detects imports <code>javax.*</code> eligible for migration to <code>jakarta.*</code> (Jakarta EE 9+).
+
 <p>
-    <b>Verificações de segurança:</b>
-    <ul>
-        <li>Verifica se o pacote javax.* é um que foi migrado para jakarta.* no Jakarta EE 9+</li>
-        <li>Verifica se a biblioteca jakarta.* correspondente está disponível no classpath do módulo</li>
-        <li>Pacotes javax que permanecem no Jakarta EE 9+ (javax.sql, javax.xml, etc.) não são migrados</li>
-    </ul>
+    <b>Security checks:</b>
+
+<ul>
+    <li>Checks if the javax.* package is one that has been migrated to jakarta.* in Jakarta EE 9+</li>
+    <li>Checks if the corresponding jakarta.* library is available in the module's classpath</li>
+
+    <li>javax packages that remain in Jakarta EE 9+ (javax.sql, javax.xml, etc.) are not migrated</li>
+
+</ul>
 </p>
 <p>
-    O quick-fix só será aplicado se a biblioteca Jakarta correspondente estiver no classpath.
+    The quick-fix will only be applied if the corresponding Jakarta library is in the classpath.
+
 </p>
 </body>
 </html>
